[gd_scene load_steps=4 format=3 uid="uid://cn6r7s8yqkh4f"]

[ext_resource type="Script" path="res://scripts/editor/project_manager.gd" id="1_manager"]
[ext_resource type="FontFile" uid="uid://bajyd14et5o6v" path="res://assets/gui/font/方正兰亭准黑_GBK.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_list_panel"]
bg_color = Color(0.18, 0.18, 0.18, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.08)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[node name="ProjectManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_manager")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.12, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 34
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Mod工程管理器"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SearchInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -260.0
offset_top = 95.0
offset_right = 260.0
offset_bottom = 135.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
placeholder_text = "搜索工程名..."
clear_button_enabled = true

[node name="ProjectListContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ProjectScrollContainer" type="ScrollContainer" parent="ProjectListContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProjectList" type="VBoxContainer" parent="ProjectListContainer/ProjectScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="EmptyLabel" type="Label" parent="."]
visible = false
z_index = 2
mouse_filter = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -40.0
offset_right = 320.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(1, 1, 1, 0.7)
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -80.0
offset_right = 250.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
theme_override_constants/separation = 14

[node name="NewProjectButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 54)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "新建工程"

[node name="OpenProjectButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 54)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "打开工程"

[node name="DeleteProjectButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 54)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "删除工程"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 140.0
offset_bottom = 80.0
custom_minimum_size = Vector2(120, 44)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "返回"

[node name="NewProjectDialog" type="Window" parent="."]
title = "新建工程"
initial_position = 2
size = Vector2i(400, 200)
visible = false

[node name="DialogContent" type="VBoxContainer" parent="NewProjectDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Label" type="Label" parent="NewProjectDialog/DialogContent"]
layout_mode = 2
text = "工程名称："

[node name="ProjectNameInput" type="LineEdit" parent="NewProjectDialog/DialogContent"]
layout_mode = 2
placeholder_text = "请输入工程名称"

[node name="Spacer" type="Control" parent="NewProjectDialog/DialogContent"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonRow" type="HBoxContainer" parent="NewProjectDialog/DialogContent"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="NewProjectDialog/DialogContent/ButtonRow"]
layout_mode = 2
text = "确定"

[node name="CancelButton" type="Button" parent="NewProjectDialog/DialogContent/ButtonRow"]
layout_mode = 2

[node name="ListPanel" type="Panel" parent="."]
z_index = -1
mouse_filter = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -255.0
offset_right = 450.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_list_panel")

[node name="DeleteConfirmDialog" type="ConfirmationDialog" parent="."]
title = "删除工程"
size = Vector2i(460, 220)
ok_button_text = "删除"
cancel_button_text = "取消"
text = "取消"

[connection signal="pressed" from="ButtonContainer/NewProjectButton" to="." method="_on_new_project_button_pressed"]
[connection signal="pressed" from="ButtonContainer/OpenProjectButton" to="." method="_on_open_project_button_pressed"]
[connection signal="pressed" from="ButtonContainer/DeleteProjectButton" to="." method="_on_delete_project_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NewProjectDialog/DialogContent/ButtonRow/ConfirmButton" to="." method="_on_confirm_new_project"]
[connection signal="pressed" from="NewProjectDialog/DialogContent/ButtonRow/CancelButton" to="." method="_on_cancel_new_project"]
